# promptly

./: .gitignore
shell-assistant/: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TERMINAL_INTEGRATION.md  config.example.yaml  mock_test.md  rustfmt.toml  test_script.md
shell-assistant/.github/workflows/: ci.yml  release.yml
shell-assistant/crates/cli/: Cargo.toml
shell-assistant/crates/cli/src/: lib.rs  main.rs
shell-assistant/crates/core/: Cargo.toml
shell-assistant/crates/core/src/: config.rs  lib.rs  llm.rs  parser.rs  prompt.rs  safety.rs
shell-assistant/crates/executor/: Cargo.toml
shell-assistant/crates/executor/src/: lib.rs  shell.rs
shell-assistant/crates/plugins/: Cargo.toml
shell-assistant/crates/plugins/src/: docker.rs  git.rs  lib.rs  manager.rs  traits.rs
shell-assistant/crates/storage/: Cargo.toml
shell-assistant/crates/storage/src/: audit.rs  history.rs  lib.rs  persistence.rs
shell-assistant/docs/: README.md
shell-assistant/docs/enterprise/: README.md
shell-assistant/powershell-module/: Copy-Executable.ps1  Install-ShellAssistant.ps1  README.md  ShellAssistant.psd1  ShellAssistant.psm1
shell-assistant/shell-integration/: README.md  install.sh  shell-assistant.sh
shell-assistant/terminal-configs/: README.md  vscode-settings.json  windows-terminal.json
shell-assistant/tests/: mock_test.md  test_llm_backends.ps1  test_llm_backends.sh  test_script.md
