[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
llama_cpp = { version = "0.3.2", optional = true }
dotenv = "0.15"
tracing = "0.1"
once_cell = "1.17"
rand = "0.8"
dirs = "5.0"
num_cpus = "1.16"

[features]
default = ["ollama", "openai"]
ollama = []
openai = []
llm-rs = ["dep:llama_cpp"]